--- a/pages/help.html
+++ b/pages/help.html
@@ -1,5 +1,5 @@
     <div>
-		
+		<h1>Bitcoin price</h1>   
 		<div class="col-lg-12">
 			<h3>What is Crypto Dashboard ?</h3>
 			- Userfriendly website to allow you to keep an eye on your investments everywhere.
