--- a/pages/navigation.html
+++ b/pages/navigation.html
@@ -8,11 +8,13 @@
 		<div id="navBarBtn" class="navbar-brand xsCenter">
 			<ul class="nav btn nav-pills">
 				<li class="active"><a data-toggle="tab" href="#generalTab" class="btn btn-default navbar-btn"><i class="fa fa-th-list fa-fw"></i></a></li>
-				<li><a data-toggle="tab" href="#addTab" class="btn btn-default navbar-btn"><i class="fa fa-plus-square-o fa-fw"></i></a></li>
+				
+				<!--<li><a data-toggle="tab" href="#addTab" class="btn btn-default navbar-btn"><i class="fa fa-plus-square-o fa-fw"></i></a></li>-->
 				<li><a data-toggle="tab" href="#chartsTab" class="btn btn-default navbar-btn"> <i class="fa fa-bar-chart fa-fw"></i></a></li>
-				<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>
+				<!--<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>-->
 				<li><a data-toggle="tab" href="#copyrightTab" class="btn btn-default navbar-btn"> <i class="fa fa-user fa-fw"></i></a></li>
 			</ul>
 		</div>
+		
 	</div>
 </nav>
