--- a/pages/headerBloc.html
+++ b/pages/headerBloc.html
@@ -13,20 +13,19 @@
 							<i class="fa fa-bank fa-2x"></i>
 						</div>
 						<div class="col-xs-9 text-right">
-							<div ng-show="totalBtcValue!=0" class="huge">{{ totalBtcValue | number:3 }} <i class="fa fa-btc fa"></i></div>
+							<div class="huge">{{ totalBtcValue | number:3 }} <i class="fa fa-btc fa"></i></div>
 						</div>
 						<div class="col-xs-12"><hr/></div>
 						<div class="col-xs-3">
 							<i class="fa fa-money fa-2x"></i>
 						</div>
 						<div class="col-xs-9 text-right">
-							<div ng-show="currenciesFavorites.length!=0" class="huge">{{ (totalBtcValue*btcPrice) | number:3 }} <i class="fa fa-usd fa"></i></div>
-							<div ng-show="currenciesFavorites.length==0"><i class="fa fa-spinner fa-spin fa-2x valueGrey"></i></div>
+							<div class="huge">{{ (totalBtcValue*btcPrice) | number:3 }} <i class="fa fa-usd fa"></i></div>
 							<div >{{}}</div>
 						</div>
 						
 						<div class="col-xs-12"><hr/></div>
-						<div class="col-xs-12 xsCenter" ng-show="totalBtcValue!=0">
+						<div class="col-xs-12 xsCenter">
 						
 							  <ui-select ng-model="currentCrypto.selected" theme="select2" ng-disabled="disabled" style="min-width: 250px;">
 								<ui-select-match placeholder="Select a currencie..."><img ng-src="{{ $select.selected.png16 }}" /> {{$select.selected.symbol + ' (' + $select.selected.name + ')' }}</ui-select-match>
