--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -37,7 +37,6 @@
 					<span class="smallFont columnCenter">Json</span>
 				</td>
 				<td style="vertical-align: middle;">
-					<a href = "{{downloadCurrenciesFavorites()}}" id = "saveCurrenciesFavorites" download="currencies.json" class="btn btn-default navbar-btn btnActionCurrencie"><i class="fa fa-save fa"></i></a>
 					<button 
 						type="button" 
 						data-toggle="modal" 
@@ -46,8 +45,13 @@
 						class="btn btn-default navbar-btn btnActionCurrencie">
 						<i class="fa fa-eye  fa"></i>
 					</button>
-					<br/>
-					<!--<input type="file" id="load" />-->
+					
+					<a href = "{{downloadCurrenciesFavorites()}}" id = "saveCurrenciesFavorites" download="currencies.json" class="btn btn-default navbar-btn btnActionCurrencie"><i class="fa fa-save fa"></i></a>
+					
+					<label for="file-upload" class="btn btn-default navbar-btn btnActionCurrencie">
+						<i class="fa fa-cloud-upload"></i>
+					</label>
+					<input id="file-upload" type="file" name="file" onchange="angular.element(this).scope().LoadFileData(this.files)" accept=".json" />
 				</td>
 			  </tr>			  
 			   <tr>
