--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -28,7 +28,7 @@
 					<span class="smallFont columnCenter">Community</span>
 				</td>
 				<td style="vertical-align: middle;">
-					<A HREF="https://cryptocommunity.slack.com/" target="_blank">https://cryptocommunity.slack.com/</A>
+					<A HREF="https://join.slack.com/t/dashboard-crypto/shared_invite/enQtMjYyNzkxMTgyNjc5LWU3ODYzNTI4MDFiYWVlOTYxNjQ2MmRiMTI1MDU3MGI3ZjgzY2I1NDU4YTJhNDQ0MzljZDlhZjZiMDRhMzJhMDM" target="_blank">Join dashboard-crypto.slack.com</A>
 				</td>
 			  </tr>
 			  <tr>
