--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<head>
 
-		<title>Crypto Currency Dashboard (bitcoin, ethereum,... price alert)</title>
+		<title>Crypto currencies price alert : bitcoin, ethereum, ...</title>
 		
 		<meta name="description" content="Bitcoin and crypto currencies price alerts. Price tracking for bitcoin, ethereum, ...for traders (BTC, ETH, LTC, DASH, XMR, ...)" />
 		<meta charset="utf-8"/>
@@ -45,7 +45,7 @@
 					<ul class="nav btn nav-pills">
 						<li class="active"><a data-toggle="tab" href="#generalTab" class="btn btn-default navbar-btn"><i class="fa fa-th-list fa-fw"></i></a></li>
 						<li><a data-toggle="tab" href="#chartsTab" class="btn btn-default navbar-btn"> <i class="fa fa-bar-chart fa-fw"></i></a></li>
-						<!--<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>-->
+						<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>
 						<li><a data-toggle="tab" href="#copyrightTab" class="btn btn-default navbar-btn"> <i class="fa fa-user fa-fw"></i></a></li>
 					</ul>
 				</div>
@@ -64,11 +64,11 @@
 			<div id="chartsTab" class="tab-pane fade">
 				<div ng-include="'./pages/charts.html'"></div>
 			</div>
-	<!--
+	
 			<div id="helpTab" class="tab-pane fade">
 				<div ng-include="'./pages/help.html'"></div>
 			</div>
-	-->
+	
 			<div id="copyrightTab" class="tab-pane fade">
 				<div ng-include="'./pages/copyright.html'"></div>
 			</div>
@@ -83,7 +83,7 @@
 				<ul class="nav btn nav-pills">
 					<li class="active"><a data-toggle="tab" href="#generalTab" class="btn btn-default navbar-btn"><i class="fa fa-th-list fa-fw"></i></a></li>
 					<li><a data-toggle="tab" href="#chartsTab" class="btn btn-default navbar-btn"> <i class="fa fa-bar-chart fa-fw"></i></a></li>
-					<!--<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>-->
+					<li><a data-toggle="tab" href="#helpTab" class="btn btn-default navbar-btn"> <i class="fa fa-question fa-fw"></i></a></li>
 					<li><a data-toggle="tab" href="#copyrightTab" class="btn btn-default navbar-btn"> <i class="fa fa-user fa-fw"></i></a></li>
 				</ul>
 			</div>
@@ -119,6 +119,7 @@
 	<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
 	<!-- infinite scroll file -->
 	<script src="./js/infinite-scroll.js"></script>
+	<script src="./js/bootbox.min.js"></script>
 	<script src="./bower_components/ui-select/dist/select.js"></script>
 	
 	<!-- MyCryptoApp --> 
