--- a/pages/help.html
+++ b/pages/help.html
@@ -1,49 +1,105 @@
     <div>
-		<h1>Bitcoin price</h1>   
-		<div class="col-lg-12">
-			<h3>What is Crypto Dashboard ?</h3>
-			- Userfriendly website to allow you to keep an eye on your investments everywhere.
-			- Just set the crypto you own and balance, it give you the total of BTC and dollars it re
-			
+		
+		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>Please read</strong> 
 			<br/><br/>
-			<hr>
-			<h4>- Help</h4>
-			<h4>- FAQ</h4>
+			<br/>
+			<br/>
+			<strong>What is CryptoDashboard ?</strong> 
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> CryptoDashboard is a place to keep track of the value of your crypto.
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> The easiest way to keep an eye on your investments everywhere.
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> Useserfriendly on your Smartphone or on your computer.
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<strong>What it isn't</strong> 
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> It isn't a place to store your coins, or trade them.
+			<br/><br/>
+			
 		</div>
 		
-		<div class="col-lg-12">
-			<hr>
-			<h3>Help</h3>		
-		</div>		
-			
-		<div class="col-lg-3 col-md-6">
-			<h3>Step 1</h3><h4>Add a currency</h4><br/>
-			<img src="img/step1.jpg" class="img-rounded" width="250" ><br/><br/>				
+		
+		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>Step 1</strong>
+			<br/>
+			<br/>
+			Add a currency
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<img src="/img/help1.jpg" class="img-rounded" width="250" >
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
 		</div>
 
-		<div class="col-lg-3 col-md-6">
-			<h3>Step 2</h3>
-			<h4>Add the balance of your coin</h4><br/>
-			<img src="img/step2_2.jpg" class="img-rounded" width="250"><br/><br/>
+		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>Step 2</strong>
+			<br/>
+			<br/>
+			Add the balance of your coin
+			<br/>
+			<br/>
+			<img src="img/help2.jpg" class="img-rounded" width="250" ><br/><br/>
+			<img src="img/help3.jpg" class="img-rounded" width="250" ><br/><br/>
 		</div>
 		
-		<div class="col-lg-3 col-md-6">
-			<h3>Step 3</h3>
-			<h4>Check your investments and statistiques</h4><br/>
-			<img src="img/step2_1.jpg" class="img-rounded" width="250"><br/><br/>
-			<img src="img/step3.jpg" class="img-rounded" width="250"><br/>
+		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>Step 3</strong>
+			<br/>
+			<br/>
+			<br/>
+			Check your investments and statistiques
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<img src="./img/tablette.jpg" class="img-rounded" width="250" >
+			<br/>
+			<br/>
+			<br/>
+			<br/>
 		</div>
 		
-		<div class="col-lg-12">
-			<hr>
-			<h3>FAQ</h3>		
-		</div>	
-		
-		<div class="col-lg-12">
-			Version 2 :
+		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>Informations</strong>
+			<br/>
+			<br/>
+			<br/>
+
+			<strong>WARN !</strong>
+			<br/>
+			Check your investments and statistiques
+			<br/>
+			<br/>	
+
+			<strong>On the way</strong>
+			<br/>
+			New features are coming
+			<br/>
+			<br/>
+			
+			<strong>Version 2</strong>
+			<br/>
+			New functionalities are coming...
+			<br/>
 			- Price alert email system cooming soon in version 2.
 			- account
-					
+
 		</div>
 		
 	</div>
