--- a/pages/help.html
+++ b/pages/help.html
@@ -1,10 +1,6 @@
-    <div>
+    <div class="divCenter">
 		
 		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
-			<strong>Please read</strong> 
-			<br/><br/>
-			<br/>
-			<br/>
 			<strong>What is CryptoDashboard ?</strong> 
 			<br/>
 			<br/>
@@ -14,21 +10,28 @@
 			<i class="fa fa-angle-right"></i> The easiest way to keep an eye on your investments everywhere.
 			<br/>
 			<br/>
-			<i class="fa fa-angle-right"></i> Useserfriendly on your Smartphone or on your computer.
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-			<strong>What it isn't</strong> 
+			<i class="fa fa-angle-right"></i> Useserfriendly on your Smartphone or on your computer. 
+			<br/><b>Read the 3 easy steps below.</b>
 			<br/>
 			<br/>
 			<i class="fa fa-angle-right"></i> It isn't a place to store your coins, or trade them.
 			<br/><br/>
+			<br/>
+			<strong>WARN !</strong>
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> On this beta version, informations you provide are saved localy.
+			<b>If you clear your browser cache, you lost them.</b>
+			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> You can save your data and retrieve them using "json save format" 
+			<br/>
+			<img src="/img/json.jpg" class="img-rounded" width="250" >
 			
 		</div>
 		
 		
-		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+		<div id="helpTab/A1" class="container box columnCenter gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
 			<strong>Step 1</strong>
 			<br/>
 			<br/>
@@ -46,7 +49,7 @@
 			<br/>
 		</div>
 
-		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+		<div id="helpTab/A2" class="container box columnCenter  gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
 			<strong>Step 2</strong>
 			<br/>
 			<br/>
@@ -57,7 +60,7 @@
 			<img src="img/help3.jpg" class="img-rounded" width="250" ><br/><br/>
 		</div>
 		
-		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+		<div id="helpTab/A3" class="container box columnCenter  gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
 			<strong>Step 3</strong>
 			<br/>
 			<br/>
@@ -75,31 +78,23 @@
 			<br/>
 		</div>
 		
-		<div class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
-			<strong>Informations</strong>
+		<div id="helpTab/A4" class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
+			<strong>New features are coming</strong>
 			<br/>
 			<br/>
+			<br/><i class="fa fa-angle-right"></i> Another currency than USD ("CNY", "CZK", "DKK", "EUR", "GBP", ...)
 			<br/>
-
-			<strong>WARN !</strong>
+			<br/><i class="fa fa-angle-right"></i> Multiple Sort (by investment, ...)
 			<br/>
-			Check your investments and statistiques
+			<br/><i class="fa fa-angle-right"></i> Multiple alerts. (alert before date of release , ...)
 			<br/>
-			<br/>	
-
-			<strong>On the way</strong>
+			<br/><i class="fa fa-angle-right"></i> Memo for remining exchange where are my coins.
 			<br/>
-			New features are coming
+			<br/><i class="fa fa-angle-right"></i> User account. (email alerts ...)
 			<br/>
+			<br/><i class="fa fa-angle-right"></i> Chart of my investment.
 			<br/>
-			
-			<strong>Version 2</strong>
-			<br/>
-			New functionalities are coming...
-			<br/>
-			- Price alert email system cooming soon in version 2.
-			- account
-
+			<br/><i class="fa fa-angle-right"></i> ...
 		</div>
 		
 	</div>
