--- a/pages/headerBloc.html
+++ b/pages/headerBloc.html
@@ -12,9 +12,10 @@
 						</div>
 						<div class="col-xs-5">
 							<br/>
-							<div class="col-xs-7 label columnLeft">Invested</div><div class="col-xs-5 value text-right" >XXX</div>
-							<div class="col-xs-7 label columnLeft">Watched</div><div class="col-xs-5 value text-right">XXX</div>
-							<div class="col-xs-7 label columnLeft">Alerts</div><div class="col-xs-5 value text-right">XXX</div>
+							<div class="col-xs-7 label columnLeft">Invested</div><div class="col-xs-5 value text-right" >{{getNbInvested()}}</div>
+							<div class="col-xs-7 label columnLeft">Watched</div><div class="col-xs-5 value text-right">{{getNbWatched()}}</div>
+							<br/>
+							<!--<div class="col-xs-7 label columnLeft">Alerts</div><div class="col-xs-5 value text-right">XXX</div>-->
 						</div>
 						
 						<div class="col-xs-12"><hr/></div>
@@ -22,7 +23,7 @@
 						<div class="col-xs-12 xsCenter">
 						
 							  <ui-select ng-model="currentCrypto.selected" theme="select2" ng-disabled="disabled" style="min-width: 250px;">
-								<ui-select-match placeholder="Select a currencie..."><img ng-src="{{ $select.selected.png16 }}" /> {{$select.selected.symbol + ' (' + $select.selected.name + ')' }}</ui-select-match>
+								<ui-select-match placeholder="Select a currencie to add..."><img ng-src="{{ $select.selected.png16 }}" /> {{$select.selected.symbol + ' (' + $select.selected.name + ')' }}</ui-select-match>
 								<ui-select-choices 	repeat="currencie in currencies | propsFilter: {name: $select.search, symbol: $select.search} | limitTo:infiniteScroll.currentItems"
 													infinite-scroll="addMoreItems()"
 													infinite-scroll-distance="2">
