--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
 	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js"></script>
 	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
 	 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 	<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
-	
+
+	<!-- charts -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
+	<script src="./js/angular-chart.min.js"></script>
+
 	<!-- infinite scroll file -->
 	<script src="./js/infinite-scroll.js"></script>
 	<script src="./js/bootbox.min.js"></script>
@@ -118,7 +121,7 @@
 	<script src="./js/MyCryptoFilters.js"></script>
 	<script src="./js/controlleurs/MainCtrl.js"></script>
 	<script src="./js/controlleurs/ListCurrenciesCtrl.js"></script>
-	<!--<script src="./js/controlleurs/ChartsCtrl.js"></script>-->
+	<script src="./js/controlleurs/ChartsCtrl.js"></script>
 	<script src="./js/controlleurs/StorageService.js"></script>
 	<script src="./js/controlleurs/RequestService.js"></script>
 	<script src="./js/controlleurs/CurrenciesService.js"></script>
