--- a/pages/charts.html
+++ b/pages/charts.html
@@ -5,7 +5,8 @@
     <canvas 
         id="doughnut"  width="300" height="220" 
         class="chart chart-doughnut"
-        chart-data="data" chart-labels="labels">
+        chart-data="data" chart-labels="labels"
+        chart-options="options">
     </canvas> 
 
 </div>
