--- a/pages/listCurrencies.html
+++ b/pages/listCurrencies.html
@@ -4,7 +4,7 @@
 	
 		<div ng-include="'./pages/headerBloc.html'"></div>
 		<div ng-include="'./pages/headerCOW.html'"></div>
-		<!--<div ng-include="'./pages/charts.html'"></div>-->
+		<div ng-include="'./pages/charts.html'"></div>
 		
 
 		<div ng-repeat="currencie in currenciesFavorites | orderBy: ['-valueDollars','-market_cap_usd']"> 
