--- a/pages/charts.html
+++ b/pages/charts.html
@@ -1,9 +1,9 @@
 
 
-<div ng-controller="ChartsCtrl" class="currencieDetail currencieDetailLook gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
+<div ng-controller="ChartsCtrl" class="blocGraph blocLook gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
     
     <canvas 
-        id="doughnut"  width="300" height="220" 
+        id="doughnut"  width="600" height="220" 
         class="chart chart-doughnut"
         chart-data="data" chart-labels="labels"
         chart-options="options">
