--- a/pages/headerBloc.html
+++ b/pages/headerBloc.html
@@ -1,5 +1,5 @@
 	
-			<div class="currencieDetail currencieDetailLook gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
+			<div class="blocCurrencie blocLook gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
 				
 					<div class="row">
 						<div class="col-xs-7 verticalHR">
