--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="page-wrapper" class="tab-content">
          
 			<div id="generalTab" class="tab-pane fade in active">
-					<div ng-include="'./pages/listCurrencies.html'"></div>
+					<div ng-include="'./pages/mainBoard.html'"></div>
 			</div>
 		
 			<div id="helpTab" class="tab-pane fade">
