--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<title>Crypto currencies price alert : bitcoin, ethereum, ...</title>
 		
-		<meta name="description" content="Bitcoin and crypto currencies price alerts. Price tracker for bitcoin BTC, ethereum ETH. Investment portfolio manager for tracking digital currencies." />
+		<meta name="description" content="Bitcoin and crypto currencies price alerts. Price tracker for bitcoin BTC, ethereum ETH. Investment portfolio manager to track digital currencies." />
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
