--- a/pages/headerBloc.html
+++ b/pages/headerBloc.html
@@ -2,6 +2,11 @@
 			<div class="blocCurrencie blocLook gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
 				
 					<div class="row">
+						<div class="col-xs-12">
+							<img ng-src="./img/title.png"  >
+						</div>
+					</div>
+					<div class="row">
 						<div class="col-xs-7 verticalHR">
 							<div class="huge">My investment</div>
 							<div class="text-right">
