--- a/pages/mainBoard.html
+++ b/pages/mainBoard.html
@@ -3,7 +3,7 @@
 	<script type="text/javascript">
 		$(function(){
 			$('legend').click(function(){
-				$(this).parent().find('.content').slideToggle("slow");
+				$(this).parent().find('.fieldsetToggler').slideToggle("slow");
 			});
 		});
 	</script>
@@ -12,16 +12,29 @@
 	
 		<div ng-include="'./pages/headerBloc.html'"></div>
 		<div ng-include="'./pages/headerCOW.html'"></div>
+		<div ng-include="'./pages/headerQuickView.html'"></div>
 
 		<fieldset class="col col-xs-12">
 			<legend> Charts view </legend>
-			<div class="content" ng-include="'./pages/charts.html'"></div>
+			<div class="fieldsetToggler" ng-include="'./pages/charts.html'"></div>
 		</fieldset>
 
 		<fieldset class="col col-xs-12">
 			<legend> Cards view </legend>
-		<div class="content" ng-include="'./pages/listCurrencies.html'"></div>
+			<div class="fieldsetToggler" ng-include="'./pages/listCurrencies.html'"></div>
 		</fieldset>
+
+		<fieldset class="col col-xs-12">
+			<legend> Help </legend>
+			<div class="fieldsetToggler" ng-include="'./pages/help.html'"></div>
+		</fieldset>
+
+		<fieldset class="col col-xs-12">
+			<legend> Infos </legend>
+			<div class="fieldsetToggler" ng-include="'./pages/infos.html'"></div>
+		</fieldset>
+
+		
 
 	</div>
 </div>	
