--- a/pages/headerMain.html
+++ b/pages/headerMain.html
@@ -3,7 +3,7 @@
 				
 					<div class="row">
 						<div class="col-xs-12 columnCenter">
-							<img id="title" ng-src="./img/title.png">
+							<img id="title" ng-src="./img/title1.png">
 						</div>
 					</div>
 					<div class="row">
