--- a/pages/mainBoard.html
+++ b/pages/mainBoard.html
@@ -10,8 +10,8 @@
 
 	<div class="divCenter row">
 	
-		<div ng-include="'./pages/headerBloc.html'"></div>
-		<div ng-include="'./pages/headerCOW.html'"></div>
+		<div ng-include="'./pages/headerMain.html'"></div>
+		<div ng-include="'./pages/headerInvest.html'"></div>
 		<div ng-include="'./pages/headerQuickView.html'"></div>
 
 		<fieldset class="col col-xs-12">
