--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	
 	<!-- MyCryptoApp --> 
 	<script src="./js/MyCryptoApp.js"></script>
+	<script src="./js/MyCryptoDirectives.js"></script>
 	<script src="./js/MyCryptoFilters.js"></script>
 	<script src="./js/controlleurs/MainCtrl.js"></script>
 	<script src="./js/controlleurs/ListCurrenciesCtrl.js"></script>
