--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="wrapper">
 	
         <div id="page-wrapper" class="tab-content">     
-			<div id="generalTab" class="tab-pane fade in active">
+			<div class="tab-pane fade in active">
 					<div ng-include="'./pages/mainBoard.html'"></div>
 			</div>
         </div>
