look et composents

--- a/pages/headerInvest.html
+++ b/pages/headerInvest.html
@@ -10,7 +10,7 @@
 							</div>
 						</div>
 						<div class="col-xs-8">
-							<div class="symbolName">
+							<div class="symbolName color1">
 									My investment
 								</div>
 								<div class="huge">{{ totalBtcValue | number:3 }} <i class="fa fa-btc fa"></i></div>
@@ -37,7 +37,7 @@
 							</div>
 						</div>
 						<div class="col-xs-8">
-							<div class="symbolName">
+							<div class="symbolName color1">
 									<a 	href="https://coinmarketcap.com/currencies/{{ getCurrencie(currencies,'BTC').id }}/" 
 									target="_blank" 
 									title="coinmarketcap : {{ getCurrencie(currencies,'BTC').symbol | uppercase}}">
@@ -65,7 +65,7 @@
 							</div>
 						</div>
 						<div class="col-xs-8">
-							<div class="symbolName">
+							<div class="symbolName color1">
 									<a 	href="https://coinmarketcap.com/currencies/{{ getCurrencie(currencies,'ESP').id }}/" 
 									target="_blank" 
 									title="coinmarketcap : {{ getCurrencie(currencies,'ESP').symbol | uppercase}}">
