--- a/pages/mainBoard.html
+++ b/pages/mainBoard.html
@@ -45,7 +45,7 @@
 			<div data-slide-toggle="fieldset2" ng-include="'./pages/fieldsetListCurrencies.html'"></div>
 		</fieldset>
 
-		<fieldset class="col col-xs-12">
+		<fieldset id="fieldsetHelp" class="col col-xs-12">
 			<legend> 
 				<button type="button" 
 					ng-click="fieldset3=!fieldset3"
