--- a/pages/fieldsetInfos.html
+++ b/pages/fieldsetInfos.html
@@ -6,7 +6,7 @@
 			  <tr>
 				<td>
 					<i class="btn btn-secondary fa fa-btc fa-2x"></i>
-					<span class="smallFont columnCenter">Donate</span>
+					<span class="labelInfo columnCenter">Donate</span>
 				</td>
 				<td style="vertical-align: middle;">
 					<span id="copyTarget">1LGS4YWatsdHrvLFAheqPds1DTM7kysrie</span>
@@ -16,7 +16,7 @@
 			  <tr>
 				<td>
 					<i class="btn btn-secondary fa fa-envelope-o fa-2x"></i>
-					<span class="smallFont columnCenter">Contact</span>
+					<span class="labelInfo columnCenter">Contact</span>
 				</td>
 				<td style="vertical-align: middle;">
 					<A HREF="mailto:cryptocurrency.dashboard@gmail.com">cryptocurrency.dashboard@gmail.com</A><br/>
@@ -25,7 +25,7 @@
 			  <tr>
 				<td>
 					<i class="btn btn-secondary fa fa-slack fa-2x"></i>
-					<span class="smallFont columnCenter">Community</span>
+					<span class="labelInfo columnCenter">Community</span>
 				</td>
 				<td style="vertical-align: middle;">
 					<A HREF="https://join.slack.com/t/dashboard-crypto/shared_invite/enQtMjYyNzkxMTgyNjc5LWU3ODYzNTI4MDFiYWVlOTYxNjQ2MmRiMTI1MDU3MGI3ZjgzY2I1NDU4YTJhNDQ0MzljZDlhZjZiMDRhMzJhMDM" target="_blank">Join dashboard-crypto.slack.com</A>
@@ -34,7 +34,7 @@
 			  <tr>
 				<td>
 					<i class="btn btn-secondary fa fa-file-code-o fa-2x"></i>
-					<span class="smallFont columnCenter">Json</span>
+					<span class="labelInfo columnCenter">Json</span>
 				</td>
 				<td style="vertical-align: middle;">
 					<button 
@@ -57,7 +57,7 @@
 			   <tr>
 				<td>
 					<i class="btn btn-secondary fa fa-copyright fa-2x"></i>
-					<span class="smallFont columnCenter">Copyright</span>
+					<span class="labelInfo columnCenter">Copyright</span>
 				</td>
 				<td style="vertical-align: middle;">
 					Crypto Dashboard - Version 1.0 - 2017 - Dobidoba
