--- a/pages/fieldsetListCurrencies.html
+++ b/pages/fieldsetListCurrencies.html
@@ -20,6 +20,8 @@
 							{{ currencie.symbol | uppercase}} ({{ currencie.name }})
 						</a>
 					</div>		
+
+					<coin-infos currencie="{{currencie}}" />
 			
 			</div>
 									
