--- a/pages/headerMain.html
+++ b/pages/headerMain.html
@@ -37,9 +37,14 @@
 					<div class="col-xs-12"><hr/></div>
 
 					<div class="row">
-						<div class="col-xs-12 columnCenter">
-							<button class="btn btn-default navbar-btn" ng-class="optionPrice?'backColor1':'backColor2'" ng-click="optionPrice=!optionPrice" type="button"><i class="fa fa-usd  fa"></i></button>
-							<button class="btn btn-default navbar-btn" ng-class="optionLabels?'backColor1':'backColor2'" ng-click="changeOptionLabels()" type="button"><i class="fa fa-bars  fa"></i></button>
+						<div class="col-xs-6 columnCenter">
+							Display détail
+						</div>		
+						<div class="col-xs-6 columnCenter">
+							<button class="btn btn-default navbar-btn btnActionCurrencie" ng-class="optionDetails==1?'backColor1':'backColor2'" ng-click="changeOptionDetails(1)" type="button"><i class="fa fa-square-o  fa"></i></button>
+							<button class="btn btn-default navbar-btn btnActionCurrencie" ng-class="optionDetails==2?'backColor1':'backColor2'" ng-click="changeOptionDetails(2)" type="button"><i class="fa fa-columns  fa"></i></button>
+							<button class="btn btn-default navbar-btn btnActionCurrencie" ng-class="optionDetails==3?'backColor1':'backColor2'" ng-click="changeOptionDetails(3)" type="button"><i class="fa fa-table  fa"></i></button>
+							<button class="btn btn-default navbar-btn btnActionCurrencie" ng-class="optionLabels?'backColor1':'backColor2'" ng-click="changeOptionLabels()" type="button"><i class="fa fa-file-text-o  fa"></i></button>
 						</div>
 					</div>
 
