--- a/pages/headerQuickView.html
+++ b/pages/headerQuickView.html
@@ -23,7 +23,7 @@
 									{{ currencie.symbol }}
 								</div>
 								<div class="col-xs-12">
-										<coin-infos currencie="{{currencie}}" />
+										<coin-infos currencie="{{currencie}}" display="1111111"/>
 								</div>
 						</div>
 				</div>
