--- a/pages/fieldsetHelp.html
+++ b/pages/fieldsetHelp.html
@@ -11,12 +11,17 @@
 			<br/>
 			<br/>
 			<i class="fa fa-angle-right"></i> Useserfriendly on your Smartphone or on your computer. 
-			<br/><b>Read the 3 easy steps below.</b>
 			<br/>
 			<br/>
 			<i class="fa fa-angle-right"></i> It isn't a place to store your coins, or trade them.
-			<br/><br/>
 			<br/>
+			<br/>
+			<i class="fa fa-angle-right"></i> New features are coming
+			<br/>
+			<br/><b>Read the 2 easy steps below.</b>
+			<br/>
+			<br/>
+			<div class="col-xs-12"><hr/></div>
 			<strong>WARN !</strong>
 			<br/>
 			<br/>
@@ -24,9 +29,8 @@
 			<b>If you clear your browser cache, you lost them.</b>
 			<br/>
 			<br/>
-			<i class="fa fa-angle-right"></i> You can save your data and retrieve them using "json save format" 
+			<i class="fa fa-angle-right"></i> You can save your data and retrieve them using "save/load" 
 			<br/>
-			<img src="/img/json.jpg" class="img-rounded" width="250" >
 			
 		</div>
 		
@@ -58,43 +62,6 @@
 			<br/>
 			<img src="img/help2.jpg" class="img-rounded" width="250" ><br/><br/>
 			<img src="img/help3.jpg" class="img-rounded" width="250" ><br/><br/>
-		</div>
-		
-		<div id="helpTab/A3" class="container box columnCenter  gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
-			<strong>Step 3</strong>
-			<br/>
-			<br/>
-			<br/>
-			Check your investments and statistiques
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-			<img src="./img/tablette.jpg" class="img-rounded" width="250" >
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-		</div>
-		
-		<div id="helpTab/A4" class="container box gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6" role="alert">
-			<strong>New features are coming</strong>
-			<br/>
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> Another currency than USD ("CNY", "CZK", "DKK", "EUR", "GBP", ...)
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> Multiple Sort (by investment, ...)
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> Multiple alerts. (alert before date of release , ...)
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> Memo for remining exchange where are my coins.
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> User account. (email alerts ...)
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> Chart of my investment.
-			<br/>
-			<br/><i class="fa fa-angle-right"></i> ...
 		</div>
 		
 	</div>
