--- a/pages/mainBoard.html
+++ b/pages/mainBoard.html
@@ -14,7 +14,7 @@
 				</button>
 				Cards view 
 			</legend>
-			<div data-slide-toggle="fieldset2" data-slide-toggle-hide="true" ng-include="'./pages/fieldsetListCurrencies.html'"></div>
+			<div data-slide-toggle="fieldset2"  ng-include="'./pages/fieldsetListCurrencies.html'"></div>
 		</fieldset>
 
 		<fieldset class="col col-xs-12">
@@ -26,7 +26,7 @@
 				</button>
 				Charts view 
 			</legend>
-			<div data-slide-toggle="fieldset1" data-slide-toggle-hide="true" ng-include="'./pages/fieldsetCharts.html'"></div>
+			<div data-slide-toggle="fieldset1" ng-include="'./pages/fieldsetCharts.html'"></div>
 		</fieldset>
 
 		<fieldset id="fieldsetHelp" class="col col-xs-12">
@@ -38,7 +38,7 @@
 				</button>
 				Help 
 			</legend>
-			<div data-slide-toggle="fieldset3" data-slide-toggle-hide="true" ng-include="'./pages/fieldsetHelp.html'"></div>
+			<div data-slide-toggle="fieldset3" ng-include="'./pages/fieldsetHelp.html'"></div>
 		</fieldset>
 
 	</div>
