--- a/pages/fieldsetListCurrencies.html
+++ b/pages/fieldsetListCurrencies.html
@@ -1,4 +1,6 @@
 
+<div class="columnCenter marginTopBottom colorHelp" ng-show="currenciesFavorites.length==0">First use ? your currencies will be displayed here !</div>
+
 <div ng-repeat="currencie in currenciesFavorites | orderBy: ['-valueDollars','-market_cap_usd']"> 
 	
 	<div 	class="blocCurrencie blocLook hrMargin gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6">
